* 2017.05.08 - added ARM compute lib package

* 2017.04.14 - improving handling of OpenBLAS on Windows

* 2017.04.05 - added package:lib-opencv-2.4.13.2 and lib-opencv-3.2.0

* 2017.03.26 - finishing unifying CLBlast autotuning package across Linux, Windows, Android

* 2017.03.16 - fixing boost compilation on Windows with VS2017

* 2017.01.19 - unified installation of ViennaCL (CPU,OpenCL) 
               across Linux, Windows, Android
             - added universal package for CLBlast
             - added ISAAC package
             - removed outdated CLBLAS and added new universal one

* 2017.01.18 - added support for libDNN, moved tiny-dnn here

* 2017.01.17 - added support for compiling ViennaCL (CPU/OpenCL) on Windows

* 2017.01.08 - many fixes to support Caffe deps on Windows, Linux and Android in a unified way

* 2016.12.21 - forcing package installation for libs targetting Android
               (otherwise may auto-detect local versions)

* 2016.12.02 - slightly fixing meta of openBLAS packages (which do not support Android)

* 2016.11.14 - added ViennaCL trunk package (CPU / OpenCL) targeting Android and Linux
             - added clBLAS and clBLAST targetting Android (though problems with native NDK)
             - added support for CrystaX and Google NDK

* 2016.11.11 - added OpenCV package for Android
             - added OpenBLAS package for Android

* 2016.11.09 - added boost lib package targeting Android

* 2016.08.08 - added GIT revision detection to packages

* 2016.06.21 - moved used math libs from other repos here
