@@ -1,0 +1,21 @@
+{
+  "backup_data_uid": "022cd0e55fde4cc4",
+  "backup_module_uid": "b0ac08fe1d3c2615",
+  "backup_module_uoa": "program",
+  "control": {
+    "author": "Grigori Fursin",
+    "author_email": "Grigori.Fursin@cTuning.org",
+    "author_webpage": "http://fursin.net",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2017-05-08T14:45:59.083846",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "1",
+      "9",
+      "1",
+      "1"
+    ]
+  },
+  "data_name": "acl-sgemm-example"
+}
