@@ -1,0 +1,76 @@
+{
+  "backup_data_uid": "022cd0e55fde4cc4",
+  "build_compiler_vars": {
+    "XOPENME": "",
+    "MM":"32",
+    "MN":"30000",
+    "MK":"9"
+  },
+  "compile_deps": {
+    "compiler": {
+      "local": "yes",
+      "name": "C compiler",
+      "sort": 10,
+      "tags": "compiler,lang-c"
+    },
+    "lib-arm-compute": {
+      "local": "yes",
+      "name": "ARM Compute Library",
+      "sort": 30,
+      "tags": "lib,arm-compute-lib"
+    },
+    "xopenme": {
+      "local": "yes",
+      "name": "xOpenME library",
+      "sort": 20,
+      "tags": "lib,xopenme"
+    }
+  },
+  "compiler_add_include_as_env_from_deps": [
+    "CK_ENV_LIB_STDCPP_INCLUDE",
+    "CK_ENV_LIB_STDCPP_INCLUDE_EXTRA"
+  ],
+  "compiler_env": "CK_CXX",
+  "compiler_flags_as_env": "$<<CK_COMPILER_FLAG_CPP11>>$",
+  "data_name": "acl-sgemm-example",
+  "extra_ld_vars": "$<<CK_EXTRA_LIB_M>>$",
+  "linker_add_lib_as_env": [
+    "CK_CXX_EXTRA",
+    "CK_ENV_LIB_STDCPP_DYNAMIC"
+  ],
+  "main_language": "cpp",
+  "process_in_tmp": "yes",
+  "program": "yes",
+  "run_cmds": {
+    "default": {
+      "ignore_return_code": "no",
+      "run_time": {
+        "fine_grain_timer_file": "tmp-ck-timer.json",
+        "run_cmd_main": "$#BIN_FILE#$ $#dataset_path#$$#dataset_filename#$ tmp-output.tmp -c",
+        "run_cmd_out1": "tmp-output1.tmp",
+        "run_cmd_out2": "tmp-output2.tmp",
+        "run_correctness_output_files": [
+          "tmp-output1.tmp",
+          "tmp-output2.tmp"
+        ],
+        "run_output_files": [
+          "tmp-output1.tmp",
+          "tmp-ck-timer.json"
+        ]
+      }
+    }
+  },
+  "run_vars": {
+    "CT_REPEAT_MAIN": "1"
+  },
+  "source_files": [
+    "sgemm.c"
+  ],
+  "tags": [
+    "demo",
+    "program",
+    "arm-compute-lib",
+    "sgemm"
+  ],
+  "target_file": "a"
+}
