@@ -1,0 +1,1 @@
+Small benchmark converted to CK - see related: https://github.com/ARM-software/ComputeLibrary/issues/93
