@@ -1,4 +1,5 @@
 * 2017.05.08 - added ARM compute lib package
+             - added simple ARM SGEMM benchmark with NEON
 
 * 2017.04.14 - improving handling of OpenBLAS on Windows
 
